# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import employeesRouter from "./employees";
 import meetingsRouter from "./meetings";
+import commentsRouter from "./comments";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(employeesRouter);
 router.use(meetingsRouter);
+router.use(commentsRouter);
 
 export default router;
